// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableFromArrays matches snapshot when loading is false 1`] = `
<div>
  <div
    class="chakra-table__container css-zipzvv"
  >
    <table
      class="chakra-table css-0"
    >
      <thead
        class="css-0"
      />
      <tbody
        class="css-0"
      >
        <tr
          class="css-0"
        >
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-cdkrf0"
            >
              John
            </div>
          </td>
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-cdkrf0"
            >
              Doe
            </div>
          </td>
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-cdkrf0"
            >
              john.doe@example.com
            </div>
          </td>
        </tr>
        <tr
          class="css-0"
        >
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-cdkrf0"
            >
              Jane
            </div>
          </td>
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-cdkrf0"
            >
              Smith
            </div>
          </td>
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-cdkrf0"
            >
              jane.smith@example.com
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`TableFromArrays matches snapshot when loading is true 1`] = `
<div>
  <div
    class="chakra-table__container css-zipzvv"
  >
    <table
      class="chakra-table css-0"
    >
      <thead
        class="css-0"
      />
      <tbody
        class="css-0"
      >
        <tr
          class="css-0"
        >
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-fotqef"
            >
              John
            </div>
          </td>
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-fotqef"
            >
              Doe
            </div>
          </td>
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-fotqef"
            >
              john.doe@example.com
            </div>
          </td>
        </tr>
        <tr
          class="css-0"
        >
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-fotqef"
            >
              Jane
            </div>
          </td>
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-fotqef"
            >
              Smith
            </div>
          </td>
          <td
            class="css-0"
          >
            <div
              class="chakra-skeleton css-fotqef"
            >
              jane.smith@example.com
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
